# uni

./: .gitignore
C++/lista1/: CMakeLists.txt  pole.txt
C++/lista2/: main.cpp
C++/lista3/: CMakeLists.txt  main.cpp  odcinek.cpp  odcinek.h
C++/lista4/: main.cpp
C++/lista5/: CMakeLists.txt  main.cpp  wielomian.cpp
C++/lista6/: bezwzgl.h  cosinus.h  dziel.h  e.h  exponent.h  liczba.h  logarytm.h  main.cpp  mnoz.h  odwrotnosc.h  operator2Arg.h  potega.h  przeciw.h  sinus.h  zmienna.cpp
C++/lista8/: bk.txt  bst.h  main  main.cpp  test_res.txt
Python/: zad1.py  zad2.py
Python/lista1/: zad6.py
adv_c++/lista1/: Makefile  program.cpp
adv_c++/lista10/: Makefile  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
adv_c++/lista12/: Makefile  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
adv_c++/lista2/: Makefile  zad1.cpp  zad2.cpp  zad3.cpp
adv_c++/lista3/: Makefile  zad1  zad1.cpp  zad2  zad2.cpp  zad3  zad3.cpp  zad5  zad5.cpp
adv_c++/lista6/: Makefile  in.txt  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
adv_c++/lista7/: Makefile  out.txt  zad1.cpp  zad2.cpp  zad3.cpp
adv_c++/lista8/: Makefile  zad1.cpp  zad2.cpp
asp.net/lista1/: lista1.sln  zadania.txt
asp.net/lista2/: lista2.sln  zad_2.txt  zad_3.txt
asp.net/lista4/: lista4.sln
asp.net/lista5/: lista5.sln
asp.net/lista6/: lista6.sln
asp.net/lista7/: lista7.sln
asp.net/lista8/: Dockerfile  lista8.sln  zad1.txt
c++/lista6/: CMakeLists.txt  dodawanie.h  fi.h  ln.h  odejmowanie.h  operator1Arg.h  pi.h  stala.h  wyrazenie.h  zmienna.h
dotnet/: .gitignore
embedded/: .gitignore
rust/: .gitignore
(+763 files in other folders)
