cmake_minimum_required(VERSION 3.13)
project(lista6)

set(CMAKE_CXX_STANDARD 14)

add_executable(lista6 main.cpp wyrazenie.h operator1Arg.h pi.h stala.h fi.h zmienna.cpp zmienna.h liczba.h sinus.h cosinus.h exponent.h ln.h bezwzgl.h przeciw.h odwrotnosc.h operator2Arg.h dodawanie.h odejmowanie.h mnoz.h dziel.h logarytm.h potega.h e.h)